# astro-reveal

./: .gitignore  AGENTS.md  astro.config.mjs  etf.md  opencli.txt  package-lock.json  package.json  quote.json  tsconfig.json  wrangler.jsonc
backend/: csi_indu.py  em-news.py  excel_downloader.py  imgnews.json  imgnews.py  indu.xlsx  inducat.xlsx  indurank.json  json_fetcher.py  news.shtml  pyproject.toml  qieman.py  section_perf.json  test.csv  test.json  testurl.py  update.py  zzfiles.toml  zzfiles.yaml  行业分类.xlsx
backend/__marimo__/session/: csi_indu.py.json
install/: astro-reveal-update.service  astro-reveal-update.timer
public/: qieman.json
src/assets/: 20260706_399317.xlsx  20260706_weight.xlsx  20260706_zzindu.xlsx  emnews.json  imgnews.json  index_perf.json  qieman.json  行业分类.xlsx
src/components/: Card.astro  CardBox.astro  CardGroup.astro  CardSlides.astro  CardTable.astro  CardTableSlide.astro  Cover.astro  CsiIndexPerf.astro  CsiIndexPerfG.astro  ImgOnly.astro  Slide.astro  Stat.astro  TableGroup.astro  TextOnlyLeft.astro  TitleH2.astro  TitleLi.astro  TitleOl.astro  TitleP.astro
src/layouts/: Layout.astro  RevealLayout.astro
src/pages/: index.astro  index.md  qieman.astro  test.astro  testcard.astro  testcsi.astro  testtable.astro
src/styles/: global.css
src/utils/: pagearr.js  paginate.js
